fix: Background and foreground colors do not have a sufficient contrast ratio.

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
   --background: #ffffff;
   --foreground: #171717;
 
-  --accent: #e62f2f;
+  --accent: #ae1414;
   --accent-foreground: #0f1622;
 
   --noise: url("../public/noise.webp");
